cmake-format hook

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,8 +1,5 @@
 add_executable(space-invaders main.cpp)
 
-set_target_properties(space-invaders PROPERTIES
-    MACOSX_BUNDLE_GUI_IDENTIFIER minesweeper.com
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-)
+set_target_properties(
+    space-invaders PROPERTIES MACOSX_BUNDLE_GUI_IDENTIFIER minesweeper.com MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
+                              MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR} MACOSX_BUNDLE TRUE)
