--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,15 @@ include(project_init)
 #
 
 if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
-    message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
-    file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/0.18.1/conan.cmake" "${CMAKE_BINARY_DIR}/conan.cmake"
-         TLS_VERIFY ON)
+    message(
+        STATUS
+            "Downloading conan.cmake from https://github.com/conan-io/cmake-conan"
+        )
+    file(
+        DOWNLOAD
+        "https://raw.githubusercontent.com/conan-io/cmake-conan/0.18.1/conan.cmake"
+        "${CMAKE_BINARY_DIR}/conan.cmake"
+        TLS_VERIFY ON)
 endif()
 
 include(conan)
