game: general structure of update and data

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,1 +1,6 @@
-add_library(space-invaders-game Object.h Object.cpp)
+find_package(Eigen3 REQUIRED)
+add_library(space-invaders-game src/Game.cpp inc/Game.h inc/Input.h
+                                inc/Object.h inc/Rect.h)
+target_link_libraries(space-invaders-game PRIVATE Eigen3::Eigen)
+target_include_directories(space-invaders-game PUBLIC inc)
+target_include_directories(space-invaders-game PRIVATE src)
