game: object rasters
* refactor of headers
* object span reads from raster
* adds fixed size vec type for use in the raster

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,13 +1,8 @@
 find_package(Eigen3 REQUIRED)
 add_library(
     space-invaders-game
-    src/Game.cpp
-    inc/Game.h
-    inc/Input.h
-    inc/Metrics.h
-    inc/Object.h
-    inc/Rect.h
-    src/Rect.cpp)
+    src/game/Game.cpp src/game/Helpers.cpp src/game/Raster.cpp
+    src/game/Rect.cpp src/game/Object.cpp)
 target_link_libraries(space-invaders-game PUBLIC Eigen3::Eigen)
 target_include_directories(space-invaders-game PUBLIC inc)
 target_include_directories(space-invaders-game PRIVATE src)
