gui: [wip] render outline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,4 +64,5 @@ if(SPACE_INVADERS_TESTS)
     add_subdirectory(test)
 endif()
 add_subdirectory(game)
+add_subdirectory(gui)
 add_subdirectory(app)
