render: read object rasters

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(space-invaders main.cpp)
 target_link_libraries(space-invaders PRIVATE space-invaders-game
-                                             space-invaders-gui)
+                                             space-invaders-render)
 
 set_target_properties(
     space-invaders
